syntax = "proto3";
package blog.v1beta1;

option go_package = "github.com/cosmonaut/blog/x/blog/types";

message Comment {
  uint64 id = 1;
  string creator = 2; 
  string title = 3; 
  string body = 4; 
  uint64 post_id = 5;
  int64 created_at = 6;
  
}