syntax = "proto3";
package blog.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "blog/v1beta1/params.proto";
import "blog/v1beta1/post.proto";
import "blog/v1beta1/comment.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/cosmonaut/blog/x/blog/types";

// Query defines the gRPC querier service.
service QueryService {
  // Parameters queries the parameters of the module.
  rpc Params(ParamsRequest) returns (ParamsResponse) {
    option (google.api.http).get = "/cosmonaut/blog/blog/params";
  }
  // Queries a list of Posts items.
	rpc Posts(PostsRequest) returns (PostsResponse) {
		option (google.api.http).get = "/cosmonaut/blog/blog/posts";
	}

// Queries a Comment by id.
	rpc Comment(CommentRequest) returns (CommentResponse) {
		option (google.api.http).get = "/cosmonaut/blog/blog/comment/{id}";
	}

	// Queries a list of Comment items.
	rpc CommentAll(CommentAllRequest) returns (CommentAllResponse) {
		option (google.api.http).get = "/cosmonaut/blog/blog/comment";
	}

// Queries a list of Comments items.
	rpc Comments(CommentsRequest) returns (CommentsResponse) {
		option (google.api.http).get = "/cosmonaut/blog/blog/comments/{id}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message ParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message ParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message PostsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message PostsResponse {
  repeated Post post = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message CommentRequest {
	uint64 id = 1;
}

message CommentResponse {
	Comment comment = 1 [(gogoproto.nullable) = false];
}

message CommentAllRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message CommentAllResponse {
	repeated Comment comment = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message CommentsRequest {
  uint64 id = 1;
	cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message CommentsResponse {
  Post post = 1;
	repeated Comment comment = 2;
	cosmos.base.query.v1beta1.PageResponse pagination = 3;
}

// this line is used by starport scaffolding # 3
